--- a/aurora-skyes-front/src/app/pages/home/home.component.html
+++ b/aurora-skyes-front/src/app/pages/home/home.component.html
@@ -1,137 +1,151 @@
-<app-header/>
+<app-header />
 
 <div class="container">
-  <div class="flight-search-form">
-    <form [formGroup]="flightSearchForm" class="search-section">
+	<div class="flight-search-form">
+		<form [formGroup]="flightSearchForm" class="search-section">
 
-      <div class="flex">
-        <div class="form-group">
-          <label for="trip-type">Type de trajet</label>
-          <select formControlName="tripType" id="trip-type">
-            <option value="aller-retour">Aller-retour</option>
-          </select>
-        </div>
+			<div class="flex">
+				<div class="form-group">
+					<label for="trip-type">Type de trajet</label>
+					<select formControlName="tripType" id="trip-type">
+						<option value="aller-retour">Aller-retour</option>
+					</select>
+				</div>
 
-        <div class="form-group">
-          <label for="currency">Monnaie</label>
-          <select formControlName="currency" id="currency">
-            <option disabled selected value="">Veuillez sélectionner une monnaie</option>
-            @for (item of monnaieList; track item) {
-              <option [value]="item.nom">{{ item.nom }}</option>
-            }
-          </select>
-        </div>
-      </div>
+				<div class="form-group">
+					<label for="currency">Monnaie</label>
+					<select formControlName="currency" id="currency">
+						<option disabled selected value="">Veuillez sélectionner une monnaie</option>
+						@for (item of monnaieList; track item) {
+						<option [value]="item.nom">{{ item.nom }}</option>
+						}
+					</select>
+				</div>
+			</div>
 
-      <div class="form-group">
-        <label for="class">Départ de</label>
-        <select formControlName="departure" id="departure">
-          <option disabled selected value="">Veuillez sélectionner un aéroport</option>
-          @for (item of airportList; track item) {
-            <option [value]="item.nom">{{ item.ville }}({{ item.nom }})</option>
-          }
-        </select>
-      </div>
+			<div class="form-group">
+				<label for="class">Départ de</label>
+				<select formControlName="departure" id="departure">
+					<option disabled selected value="">Veuillez sélectionner un aéroport</option>
+					@for (item of airportList; track item) {
+					<option [value]="item.nom">{{ item.ville }}({{ item.nom }})</option>
+					}
+				</select>
+			</div>
 
-      <div class="form-group">
-        <label for="arrival">Arrivée à</label>
-        <select formControlName="arrival" id="arrival">
-          <option disabled selected value="">Veuillez sélectionner un aéroport</option>
-          @for (item of airportList; track item) {
-            <option [value]="item.nom">{{ item.ville }}({{ item.nom }})</option>
-          }
-        </select></div>
+			<div class="form-group">
+				<label for="arrival">Arrivée à</label>
+				<select formControlName="arrival" id="arrival">
+					<option disabled selected value="">Veuillez sélectionner un aéroport</option>
+					@for (item of airportList; track item) {
+					<option [value]="item.nom">{{ item.ville }}({{ item.nom }})</option>
+					}
+				</select>
+			</div>
 
-      <div class="form-group">
-        <label for="date">Dates de voyage</label>
-        <div class="date-range" id="date">
-          <input formControlName="departureDate" placeholder="Départ" type="date"/>
-          <input formControlName="returnDate" placeholder="Retour" type="date"/>
-        </div>
-      </div>
+			<div class="form-group">
+				<label for="date">Dates de voyage</label>
+				<div class="date-range" id="date">
+					<input formControlName="departureDate" placeholder="Départ" type="date" />
+					<input formControlName="returnDate" placeholder="Retour" type="date" />
+				</div>
+			</div>
 
-      <div class="form-group">
-        <label for="passengers">Passagers</label>
-        <input formControlName="passengers" id="passengers" min="1" type="number" value="1"/>
-      </div>
+			<div class="form-group">
+				<label for="passengers">Passagers</label>
+				<input formControlName="passengers" id="passengers" min="1" type="number" value="1" />
+			</div>
 
-      <div class="form-group">
-        <label for="class">Classe</label>
-        <select formControlName="class" id="class">
-          <option value="ECONOMY">Economie</option>
-          <option value="FIRST">Première</option>
-        </select>
-      </div>
+			<div class="form-group">
+				<label for="class">Classe</label>
+				<select formControlName="class" id="class">
+					<option value="ECONOMY">Economie</option>
+					<option value="FIRST">Première</option>
+				</select>
+			</div>
 
+			<div class="form-group">
+				<label>
+					<input type="checkbox" formControlName="escale" />
+					Inclure les vols avec escale
+				</label>
+			</div>
 
-      <button (click)="onSearch()" [disabled]="flightSearchForm.invalid" class="search-button" type="button">Rechercher
-        les vols
-      </button>
+			<button (click)="onSearch()" [disabled]="flightSearchForm.invalid" class="search-button"
+				type="button">Rechercher
+				les vols
+			</button>
 
-      @if (error != '') {
-        <p class="error">{{ error }}</p>
-      }
-    </form>
-  </div>
+			@if (error != '') {
+			<p class="error">{{ error }}</p>
+			}
+		</form>
+	</div>
 
-  <div class="destination-list">
-    @if (search) {
-      <div class="flight-section">
-        <h3>Vol aller</h3>
-        @if (outboundFlights.length == 0) {
-          <p>Pas de vol allé trouvé pour votre recherche</p>
-        }
-        @for (flight of outboundFlights; track outboundFlights) {
-          <div class="destination-item">
-            <div class="destination-info">
-              <p class="long-text">{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
-                ➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
-              <p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
-              <p class="tag">{{ flightSearchForm.controls.class.value == 'ECONOMY' ? 'Economie' : 'Business' }}</p>
-              <p class="short-text">{{ flight.prix }} {{ flightSearchForm.controls.currency.value }}/personne</p>
-              <button type="button" (click)="selectFlight(flight)">Réserver</button>
-            </div>
-          </div>
-        }
-      </div>
-      <hr>
-      <div class="flight-section">
-        <h3>Vol retour</h3>
-        @if (returnFlights.length == 0) {
-          <p>Pas de vol retour trouvé pour votre recherche</p>
-        }
-        @for (flight of returnFlights; track returnFlights) {
-          <div class="destination-item">
-            <div class="destination-info">
-              <p class="long-text">{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
-                ➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
-              <p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
-              <p class="tag">{{ flightSearchForm.controls.class.value == 'ECONOMY' ? 'Economie' : 'Business' }}</p>
-              <p class="short-text">{{ flight.prix }} {{ flightSearchForm.controls.currency.value }}/personne</p>
-              <button type="button" (click)="selectFlight(flight)">Réserver</button>
-            </div>
-          </div>
-        }
-      </div>
-    } @else {
-      <div class="flight-section">
-        <h3>Liste de tous les vols</h3>
-        @for (flight of flightList; track flight.id) {
-          <div class="destination-item">
-            <div class="destination-info">
-              <p class="long-text">{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
-                ➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
-              <p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm' }}</p>
-              <p class="tag">{{ flightSearchForm.controls.class.value == 'ECONOMY' ? 'Economie' : 'Business' }}</p>
-              <p class="short-text">{{ flight.prix }} EUR/personne</p>
-              <button type="button" (click)="selectFlight(flight)">Réserver</button>
-            </div>
-          </div>
-        }
-      </div>
-    }
-  </div>
+	<div class="destination-list">
+		@if (search) {
+		<div class="flight-section">
+			<h3>Vol aller</h3>
+			@if (outboundFlights.length == 0) {
+			<p>Pas de vol allé trouvé pour votre recherche</p>
+			}
+			@for (flight of outboundFlights; track outboundFlights) {
+			<div class="destination-item">
+				<div class="destination-info">
+					<p class="long-text">{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
+						➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
+					<p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm'
+						}}</p>
+					<p class="tag">{{ flightSearchForm.controls.class.value == 'ECONOMY' ? 'Economie' : 'Business' }}
+					</p>
+					<p class="short-text">{{ calculerPrix(flight) }} {{ flightSearchForm.controls.currency.value }}/personne</p>
+					<button type="button" (click)="selectFlight(flight)">Réserver</button>
+				</div>
+			</div>
+			}
+		</div>
+		<hr>
+		<div class="flight-section">
+			<h3>Vol retour</h3>
+			@if (returnFlights.length == 0) {
+			<p>Pas de vol retour trouvé pour votre recherche</p>
+			}
+			@for (flight of returnFlights; track returnFlights) {
+			<div class="destination-item">
+				<div class="destination-info">
+					<p class="long-text">{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
+						➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
+					<p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm'
+						}}</p>
+					<p class="tag">{{ flightSearchForm.controls.class.value == 'ECONOMY' ? 'Economie' : 'Business' }}
+					</p>
+					<p class="short-text">{{ calculerPrix(flight) }} {{ flightSearchForm.controls.currency.value }}/personne</p>
+					<button type="button" (click)="selectFlight(flight)">Réserver</button>
+				</div>
+			</div>
+			}
+		</div>
+		} @else {
+		<div class="flight-section">
+			<h3>Liste de tous les vols</h3>
+			@for (flight of flightList; track flight.id) {
+			<div class="destination-item">
+				<div class="destination-info">
+					<p class="long-text">{{ flight.aeroportDepart.ville }}({{ flight.aeroportDepart.nom }})
+						➡️ {{ flight.aeroportArrivee.ville }}({{ flight.aeroportArrivee.nom }})</p>
+					<p class="short-text">{{ flight.dateDepart | date:'HH:mm' }} 🕰️ {{ flight.dateArrive | date:'HH:mm'
+						}}</p>
+					<p class="tag">{{ flightSearchForm.controls.class.value == 'ECONOMY' ? 'Economie' : 'Business' }}
+					</p>
+					<p class="short-text">{{ calculerPrix(flight) }} {{ flightSearchForm.controls.currency.value }}/personne</p>
+					<button type="button" (click)="selectFlight(flight)">Réserver</button>
+				</div>
+			</div>
+			}
+		</div>
+		}
+	</div>
 
-  <app-confirm-modal (confirm)="handleConfirmation($event)"></app-confirm-modal>
+	<app-confirm-modal (confirm)="handleConfirmation($event)"></app-confirm-modal>
 
 </div>
