--- a/aurora-skyes-front/src/app/shared/header/header.component.scss
+++ b/aurora-skyes-front/src/app/shared/header/header.component.scss
@@ -6,11 +6,10 @@ header {
   color: white;
   font-family: "Arial Narrow Bold", sans-serif;
   margin-bottom: 20px;
-  box-shadow: rgba(149, 157, 165, 0.37) 0px 8px 24px;
+  box-shadow: rgba(149, 157, 165, 0.37) 0 8px 24px;
 
   .logo {
     flex: 1;
-    margin-left: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,7 +18,18 @@ header {
       width: 55px;
       margin-right: 15px;
     }
+  }
 
+  .langage {
+    width: 150px;
+
+    select {
+      border-radius: 10px;
+      background: white;
+      padding: 3px 5px;
+      margin-left: 20px;
+      border: none;
+    }
   }
 
   .deconnexion {
