[feat] translate service

--- a/aurora-skyes-front/src/app/shared/header/header.component.html
+++ b/aurora-skyes-front/src/app/shared/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
   <div class="langage">
-    <select id="langage" name="langage">
+    <select id="langage" name="langage" (change)="changeLanguage($event)">
       <option value="fr">FR</option>
       <option value="es">ES</option>
-      <option value="gb">GB</option>
+      <option value="en">EN</option>
     </select>
   </div>
 
