--- a/aurora-skyes-front/src/app/shared/header/header.component.html
+++ b/aurora-skyes-front/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="langage">
-    <select id="langage" name="langage" (change)="changeLanguage($event)">
+    <select (change)="changeLanguage($event)" id="langage" name="langage">
       <option value="fr">FR</option>
       <option value="es">ES</option>
       <option value="en">EN</option>
@@ -13,6 +13,19 @@
   </div>
 
   <div class="deconnexion">
+    <a href="reservation">
+      <svg viewBox="0,0,256,256" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
+        <g fill="#ffffff" fill-rule="nonzero" font-family="none" font-size="none" font-weight="none" stroke="none"
+           stroke-dasharray="" stroke-dashoffset="0" stroke-linecap="butt" stroke-linejoin="miter"
+           stroke-miterlimit="10"
+           stroke-width="1" style="mix-blend-mode: normal" text-anchor="none">
+          <g transform="scale(5.33333,5.33333)">
+            <path
+              d="M24,4c-5.50508,0 -10,4.49492 -10,10c0,5.50508 4.49492,10 10,10c5.50508,0 10,-4.49492 10,-10c0,-5.50508 -4.49492,-10 -10,-10zM24,7c3.88376,0 7,3.11624 7,7c0,3.88376 -3.11624,7 -7,7c-3.88376,0 -7,-3.11624 -7,-7c0,-3.88376 3.11624,-7 7,-7zM11.97852,28c-2.17981,0 -3.97852,1.79871 -3.97852,3.97852v1.52148c0,3.60417 2.27927,6.39223 5.30664,8.0625c3.02737,1.67027 6.86146,2.4375 10.69336,2.4375c3.8319,0 7.66599,-0.76723 10.69336,-2.4375c2.58128,-1.42415 4.52398,-3.69988 5.06836,-6.5625h0.24023v-3.02148c0,-2.17981 -1.80066,-3.97852 -3.98047,-3.97852zM11.97852,31h24.04297c0.55819,0 0.98047,0.42033 0.98047,0.97852v0.02148h-0.00195v1.5c0,2.39583 -1.34573,4.10777 -3.75586,5.4375c-2.41013,1.32973 -5.82604,2.0625 -9.24414,2.0625c-3.4181,0 -6.83401,-0.73277 -9.24414,-2.0625c-2.41013,-1.32973 -3.75586,-3.04167 -3.75586,-5.4375v-1.52148c0,-0.55819 0.42033,-0.97852 0.97852,-0.97852z"></path>
+          </g>
+        </g>
+      </svg>
+    </a>
     <button (click)="deconnexion()">Deconnexion</button>
   </div>
 </header>
