--- a/aurora-skyes-front/src/app/shared/header/header.component.scss
+++ b/aurora-skyes-front/src/app/shared/header/header.component.scss
@@ -10,13 +10,18 @@ header {
 
   .logo {
     flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
     img {
       width: 55px;
       margin-right: 15px;
+    }
+
+    a {
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
     }
   }
 
@@ -47,7 +52,7 @@ header {
       color: #007bff;
     }
 
-    svg {
+    img {
       width: 30px;
       margin-right: 10px;
     }
