--- a/aurora-skyes-front/src/app/pages/reservation/reservation.component.html
+++ b/aurora-skyes-front/src/app/pages/reservation/reservation.component.html
@@ -1,32 +1,33 @@
+<app-header/>
 <div class="reservation-container">
-    <h2>Liste des Réservations</h2>
+  <h2>Liste des Réservations</h2>
 
-    <p *ngIf="!reservationList?.length">Aucune réservation trouvée.</p>
-
-    <table *ngIf="reservationList?.length" class="reservation-table">
-        <thead>
-        <tr>
-            <th>#</th>
-            <th>Nom</th>
-            <th>Vol</th>
-            <th>Date</th>
-            <th>Passagers</th>
-            <th>Classe</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let reservation of reservationList; let i = index">
-            <td>{{ i + 1 }}</td>
-            <td>{{ reservation.nom }}</td>
-            <td>{{ reservation.vol }}</td>
-            <td>{{ reservation.date | date: 'yyyy-MM-dd' }}</td>
-            <td>{{ reservation.passagers }}</td>
+  @if (!reservationList?.length) {
+    <p>Aucune réservation </p>
+  } @else {
+    <table class="reservation-table">
+      <thead>
+      <tr>
+        <th>#</th>
+        <th>Vol</th>
+        <th>Classe</th>
+        <th>Siege</th>
+      </tr>
+      </thead>
+      <tbody>
+        @for (reservation of reservationList; track reservationList.length) {
+          <tr>
+            <td>{{ reservation.id }}</td>
+            <td>{{ reservation.volId }}</td>
             <td>{{ reservation.classe }}</td>
-        </tr>
-        </tbody>
-        <div class="button-container">
-            <button (click)="navigateToHome()">Nouvelle Réservation</button>
-        </div>
-
+            <td>{{ reservation.siege }}</td>
+          </tr>
+        }
+      </tbody>
     </table>
+
+    <div class="button-container">
+      <button (click)="navigateToHome()">Nouvelle réservation</button>
+    </div>
+  }
 </div>
