--- a/aurora-skyes-front/src/app/shared/header/header.component.scss
+++ b/aurora-skyes-front/src/app/shared/header/header.component.scss
@@ -26,7 +26,7 @@ header {
   }
 
   .langage {
-    width: 150px;
+    width: 15%;
 
     select {
       border-radius: 10px;
@@ -38,7 +38,7 @@ header {
   }
 
   .deconnexion {
-    width: 200px;
+    width: 15%;
     display: flex;
     align-items: center;
     margin-right: 20px;
@@ -54,7 +54,7 @@ header {
 
     img {
       width: 30px;
-      margin-right: 10px;
+      margin: 0 10px;
     }
   }
 }
