Changement taille titre

--- a/aurora-skyes-front/src/app/pages/reservation/reservation.component.html
+++ b/aurora-skyes-front/src/app/pages/reservation/reservation.component.html
@@ -1,6 +1,6 @@
 <app-header/>
 <div class="reservation-container">
-  <h2>Liste des Réservations</h2>
+  <h2>Liste des réservations</h2>
 
   @if (!reservationList?.length) {
     <p>Aucune réservation </p>
