--- a/aurora-skyes-front/src/app/pages/reservation/reservation.component.html
+++ b/aurora-skyes-front/src/app/pages/reservation/reservation.component.html
@@ -1,40 +1,42 @@
 <app-header/>
 <div class="reservation-container">
-  <h2>Liste des réservations</h2>
+    <h2>Liste des réservations</h2>
 
-  @if (!reservationList?.length) {
-    <p>Aucune réservation </p>
-  } @else {
-    <table class="reservation-table">
-      <thead>
-      <tr>
-        <th>#</th>
-        <th>Vol</th>
-        <th>Date</th>
-        <th>Classe</th>
-        <th>Siege</th>
-      </tr>
-      </thead>
-      <tbody>
-        @for (reservation of reservationList; track reservationList.length) {
-          @if (reservation.vol) {
+    @if (reservationList.length <= 0) {
+        <p>Aucune réservation </p>
+    } @else {
+        <table class="reservation-table">
+            <thead>
             <tr>
-              <td>{{ reservation.id }}</td>
-              <td>{{ reservation.vol.aeroportDepart.ville }}({{ reservation.vol.aeroportDepart.nom }})
-                ➡️ {{ reservation.vol.aeroportArrivee.ville }}({{ reservation.vol.aeroportArrivee.nom }})
-              </td>
-              <td>{{ reservation.vol.dateDepart | date:'HH:mm' }}🕰️ {{ reservation.vol.dateArrive | date:'HH:mm' }}
-              </td>
-              <td>{{ reservation.classe == 'ECONOMY' ? 'Economie' : 'Business' }}</td>
-              <td>{{ reservation.siege }}</td>
+                <th>#</th>
+                <th>Vol</th>
+                <th>Date</th>
+                <th>Classe</th>
+                <th>Siege</th>
             </tr>
-          }
-        }
-      </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @for (reservation of reservationList; track reservationList.length) {
+                    @if (reservation.vol) {
+                        <tr>
+                            <td>{{ reservation.id }}</td>
+                            <td>{{ reservation.vol.aeroportDepart.ville }}({{ reservation.vol.aeroportDepart.nom }})
+                                ➡️ {{ reservation.vol.aeroportArrivee.ville }}({{ reservation.vol.aeroportArrivee.nom }}
+                                )
+                            </td>
+                            <td>{{ reservation.vol.dateDepart | date:'HH:mm' }}
+                                🕰️ {{ reservation.vol.dateArrive | date:'HH:mm' }}
+                            </td>
+                            <td>{{ reservation.classe == 'ECONOMY' ? 'Economie' : 'Business' }}</td>
+                            <td>{{ reservation.siege }}</td>
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
 
-    <div class="button-container">
-      <button (click)="navigateToHome()">Nouvelle réservation</button>
-    </div>
-  }
+        <div class="button-container">
+            <button (click)="navigateToHome()">Nouvelle réservation</button>
+        </div>
+    }
 </div>
