--- a/aurora-skyes-front/src/app/pages/reservation-state/reservation-state.component.html
+++ b/aurora-skyes-front/src/app/pages/reservation-state/reservation-state.component.html
@@ -1,15 +1,14 @@
 <app-header/>
 @if (reservationStats) {
-  <div>
-    <h2>Statistiques des réservations</h2>
-    <p>Date : {{ reservationStats.date | date }}</p>
-    <p>Réservations OK : {{ reservationStats.reservationOK }}</p>
-    <p>Réservations KO : {{ reservationStats.reservationKO }}</p>
-  </div>
-  @if (!reservationStats) {
     <div>
-      <p>En attente des données...</p>
+        <h2>Statistiques des réservations</h2>
+        <p>Date : {{ reservationStats.date | date }}</p>
+        <p>Réservations OK : {{ reservationStats.reservationOK }}</p>
+        <p>Réservations KO : {{ reservationStats.reservationKO }}</p>
     </div>
-  }
+} @else {
+    <div>
+        <p>En attente des données...</p>
+    </div>
 }
 
