Mise en place de graph avec chart.js (données moquées pour le moment)

--- a/aurora-skyes-front/src/app/pages/reservation-state/reservation-state.component.html
+++ b/aurora-skyes-front/src/app/pages/reservation-state/reservation-state.component.html
@@ -3,3 +3,13 @@
 reservationOK : {{ reservationOK }}
 reservationKO : {{ reservationKO }}
 
+<div class="chart-container">
+    <h2>Statistiques des réservations</h2>
+    <canvas [data]="chartData"
+            [options]="chartOptions"
+            baseChart
+            chartType="doughnut">
+    </canvas>
+</div>
+
+
