Ajustement du graph

--- a/aurora-skyes-front/src/app/pages/reservation-state/reservation-state.component.html
+++ b/aurora-skyes-front/src/app/pages/reservation-state/reservation-state.component.html
@@ -1,15 +1,13 @@
-<app-header/>
+<app-header></app-header>
 
 reservationOK : {{ reservationOK }}
 reservationKO : {{ reservationKO }}
 
 <div class="chart-container">
-    <h2>Statistiques des réservations</h2>
-    <canvas [data]="chartData"
-            [options]="chartOptions"
-            baseChart
-            chartType="doughnut">
-    </canvas>
+  <h2>Statistiques des réservations</h2>
+  <canvas [data]="chartData"
+          [options]="chartOptions"
+          [type]="'line'"
+          baseChart>
+  </canvas>
 </div>
-
-
