--- a/aurora-skyes-front/src/app/pages/reservation/reservation.component.html
+++ b/aurora-skyes-front/src/app/pages/reservation/reservation.component.html
@@ -2,7 +2,7 @@
 <div class="reservation-container">
   <h2>Liste des Réservations</h2>
 
-  @if (!reservationList?.length) {
+  @if (!reservationList.length) {
     <p>Aucune réservation </p>
   } @else {
     <table class="reservation-table">
